--- a/ftpConfig.yml
+++ b/ftpConfig.yml
@@ -3,15 +3,15 @@ th_repos:
     #ip dir
     port: '21'
     
-    name: 'tyhoo.com/jarry'
+    name: 'tyhoo.com/sdkftp'
     
-    password: '19861230'
+    password: 'sdkftp.com'
     
     filter:
-        '/Support/th_repos/maya/plug-ins/mtoa_1.2.7.3_maya2015/bin':
+        '/th_repos/maya/plug-ins/mtoa_1.2.7.3_maya2015/bin':
             - '.py'
             - '.exe'
-        '/Support/th_repos/pyLibs':
+        '/th_repos/pyLibs':
             - '.py'
-        '/Support/th_repos/thLibs':
+        '/th_repos/thLibs':
             - ''
