--- a/ftpConfig.yml
+++ b/ftpConfig.yml
@@ -14,6 +14,8 @@ thRepos:
                 - 'history'
                 - '.gitkeep'
                 - '.gitignore'
+            included:
+                - ''
             info: "python第三方常用库" 
             
         maya-modules :
@@ -24,6 +26,8 @@ thRepos:
                 - '.gitignore'
                 - 'shaveHaircut.mod'
                 - 'MiarmyForMaya.mod'
+            included:
+                - ''
             info: "maya的插件环境配置"
             
         maya-Scripts :
@@ -44,11 +48,14 @@ thRepos:
                 - 'history'
                 - '.gitkeep'
                 - '.gitignore'
+            included:
             info: "Arnold渲染器插件"
             
         maya2016-Yeti216 :
             path: '/thRepos/maya/plug-ins/Yeti2.1.6_Maya2016'
             excluded:
+                - ''
+            included:
                 - ''
             info: "Yeti毛发插件"
             
@@ -58,4 +65,6 @@ thRepos:
                 - 'history'
                 - '.gitkeep'
                 - '.gitignore'
+            included:
+                - ''
             info: "Arnold渲染器插件"  
