--- a/ftpConfig.yml
+++ b/ftpConfig.yml
@@ -26,6 +26,8 @@ thRepos:
                 - '.gitignore'
                 - 'shaveHaircut.mod'
                 - 'MiarmyForMaya.mod'
+                - 'pgYetiMaya.mod'
+                - 'mtoa.mod'
             included:
                 - ''
             info: "maya的插件环境配置"
@@ -39,34 +41,5 @@ thRepos:
                 - '.py'
             included:
                 - 'userSetup.py'
-            info: "maya脚本"
+            info: "maya脚本"            
             
-            
-        maya2016-mtoa1422 :
-            path: '/thRepos/maya/plug-ins/mtoa_1.4.2.2_maya2016'
-            excluded:
-                - 'history'
-                - '.gitkeep'
-                - '.gitignore'
-            included:
-                - ''
-                
-            info: "Arnold渲染器插件"
-            
-        maya2016-Yeti216 :
-            path: '/thRepos/maya/plug-ins/Yeti2.1.6_Maya2016'
-            excluded:
-                - ''
-            included:
-                - ''
-            info: "Yeti毛发插件"
-            
-        maya2014-mtoa1273 :
-            path: '/thRepos/maya/plug-ins/mtoa_1.2.7.3_maya2014'
-            excluded:
-                - 'history'
-                - '.gitkeep'
-                - '.gitignore'
-            included:
-                - ''
-            info: "Arnold渲染器插件"  
